# android_packages_apps_Camera2

./: .gitignore  Android.bp  Android.mk  AndroidManifest-gradle.xml  AndroidManifest.xml  build.gradle  privapp_whitelist_com.android.camera2.xml  settings.gradle
jni/: Android.bp  Android.mk  CMakeLists.txt
modules/: xmp_toolkit
modules/android_ex_camera2/: build.gradle
modules/libjpeg/: CMakeLists.txt  libjpeg-turbo
quickReader/libs/: Android.bp
quickReader/res/drawable/: ic_qr_shortcut.xml  ic_qr_tile.xml
quickReader/res/layout/: activity_scanner.xml
quickReader/res/values/: colors.xml  strings.xml  (+1 more)
res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
res/layout/: photo_bottombar_buttons.xml  photo_intent_bottombar_buttons.xml  video_bottombar_buttons.xml  video_intent_bottombar_buttons.xml
res/values/: cm_strings.xml
res/values-af/: cm_strings.xml
res/values-ar/: cm_strings.xml
res/values-as/: cm_strings.xml
res/values-as-rIN/: cm_strings.xml
res/values-ast-rES/: cm_strings.xml  strings.xml
res/values-az/: cm_strings.xml
res/values-az-rAZ/: cm_strings.xml
res/values-be/: cm_strings.xml  strings.xml
res/values-bg/: cm_strings.xml
res/values-bn/: cm_strings.xml
res/values-bs/: cm_strings.xml
res/values-ca/: cm_strings.xml
res/values-cs/: cm_strings.xml
res/values-cy/: cm_strings.xml  strings.xml
res/values-da/: cm_strings.xml
res/values-de/: cm_strings.xml
res/values-el/: cm_strings.xml
res/values-en-rAU/: cm_strings.xml
res/values-en-rCA/: cm_strings.xml
res/values-en-rGB/: cm_strings.xml
res/values-en-rIN/: cm_strings.xml
res/values-eo/: strings.xml
res/values-es/: cm_strings.xml
res/values-es-rCO/: cm_strings.xml
res/values-es-rUS/: cm_strings.xml
res/values-et/: cm_strings.xml
res/values-et-rEE/: cm_strings.xml
res/values-eu/: cm_strings.xml
res/values-fa/: cm_strings.xml
res/values-fi/: cm_strings.xml
res/values-fr/: cm_strings.xml
res/values-fur-rIT/: cm_strings.xml  strings.xml
res/values-fy-rNL/: cm_strings.xml
res/values-ga-rIE/: cm_strings.xml
res/values-gd/: cm_strings.xml  strings.xml
res/values-gd-rGB/: cm_strings.xml
res/values-gl/: cm_strings.xml
res/values-gu/: cm_strings.xml
res/values-hi/: cm_strings.xml
res/values-hr/: cm_strings.xml
res/values-hu/: cm_strings.xml
res/values-in/: cm_strings.xml
res/values-is/: cm_strings.xml
res/values-it/: cm_strings.xml
res/values-iw/: cm_strings.xml
res/values-ja/: cm_strings.xml
res/values-ka/: cm_strings.xml
res/values-kab-rDZ/: cm_strings.xml  strings.xml
res/values-kn/: cm_strings.xml
res/values-kn-rIN/: cm_strings.xml
res/values-ko/: cm_strings.xml
res/values-ku/: cm_strings.xml  strings.xml
res/values-lb/: cm_strings.xml  strings.xml
res/values-lo/: cm_strings.xml
res/values-lt/: cm_strings.xml
res/values-lu/: cm_strings.xml
res/values-lv/: cm_strings.xml
res/values-ml/: cm_strings.xml
res/values-mr/: cm_strings.xml
res/values-nb/: cm_strings.xml
res/values-nl/: cm_strings.xml
res/values-oc/: strings.xml
res/values-or/: cm_strings.xml
res/values-or-rIN/: cm_strings.xml
res/values-pl/: cm_strings.xml
res/values-pt-rBR/: cm_strings.xml
res/values-pt-rPT/: cm_strings.xml
res/values-rm/: strings.xml
res/values-ro/: cm_strings.xml
res/values-ru/: cm_strings.xml
res/values-sc-rIT/: strings.xml
res/values-sk/: cm_strings.xml
res/values-sl/: cm_strings.xml
res/values-sq/: cm_strings.xml
res/values-sq-rAL/: cm_strings.xml
res/values-sr/: cm_strings.xml
res/values-sv/: cm_strings.xml
res/values-ta/: cm_strings.xml
res/values-te/: cm_strings.xml
res/values-th/: cm_strings.xml
res/values-tl/: cm_strings.xml
res/values-tr/: cm_strings.xml
res/values-ug/: cm_strings.xml  strings.xml
res/values-uk/: cm_strings.xml
res/values-vi/: cm_strings.xml
res/values-zh-rCN/: cm_strings.xml
res/values-zh-rHK/: cm_strings.xml
res/values-zh-rTW/: cm_strings.xml
res/xml/: camera_preferences.xml
res_p/values-ast-rES/: strings.xml
res_p/values-cy/: strings.xml
res_p/values-eo/: strings.xml
res_p/values-es-rCO/: strings.xml
res_p/values-fur-rIT/: strings.xml
res_p/values-gd/: strings.xml
res_p/values-kab-rDZ/: strings.xml
res_p/values-ku/: strings.xml
res_p/values-lb/: strings.xml
res_p/values-sc-rIT/: strings.xml
res_p/values-su/: strings.xml
res_p/values-ug/: strings.xml
tests/: Android.bp  Android.mk
(+78 files in other folders)
